[gd_scene load_steps=9 format=3 uid="uid://173vb7ig0vfd"]

[ext_resource type="Script" path="res://src/menu.gd" id="1_53n2c"]
[ext_resource type="FontFile" uid="uid://b7jasa607pvfx" path="res://fonts/Louis George Cafe Bold.ttf" id="2_4qysc"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2_4qysc")])
cache/0/96/0/ascent = 0.0
cache/0/96/0/descent = 0.0
cache/0/96/0/underline_position = 0.0
cache/0/96/0/underline_thickness = 0.0
cache/0/96/0/scale = 1.0
cache/0/96/0/kerning_overrides/96/0 = Vector2(0, 0)
cache/0/96/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/96/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_ea50h"]
font_size = 96

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2_4qysc")])
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_kumw7"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_17upj"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_cdviw"]
font_size = 24

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_53n2c")

[node name="C" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="C"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="V" type="VBoxContainer" parent="C/V"]
layout_mode = 2

[node name="Title" type="Label" parent="C/V/V"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "Gordle"
label_settings = SubResource("LabelSettings_ea50h")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="C/V/V"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Wordle in Godot"
label_settings = SubResource("LabelSettings_kumw7")
horizontal_alignment = 1

[node name="V2" type="VBoxContainer" parent="C/V"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="V" type="VBoxContainer" parent="C/V/V2"]
layout_mode = 2

[node name="DailyButton" type="Button" parent="C/V/V2/V"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Daily Gordle"

[node name="Label" type="Label" parent="C/V/V2/V"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Changes at midnight local time"
label_settings = SubResource("LabelSettings_17upj")
horizontal_alignment = 1

[node name="V2" type="VBoxContainer" parent="C/V/V2"]
custom_minimum_size = Vector2(310, 0)
layout_mode = 2

[node name="RandomButton" type="Button" parent="C/V/V2/V2"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Random Gordle"

[node name="H2" type="HBoxContainer" parent="C/V/V2/V2"]
layout_mode = 2
alignment = 1

[node name="Random3" type="Button" parent="C/V/V2/V2/H2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "3dle"

[node name="Random4" type="Button" parent="C/V/V2/V2/H2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "4dle"

[node name="Spacer" type="Control" parent="C/V/V2/V2/H2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Random6" type="Button" parent="C/V/V2/V2/H2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "6dle"

[node name="Random7" type="Button" parent="C/V/V2/V2/H2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "7dle"

[node name="Random8" type="Button" parent="C/V/V2/V2/H2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "8dle"

[node name="Label" type="Label" parent="C/V/V2/V2"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Different every time"
label_settings = SubResource("LabelSettings_cdviw")
horizontal_alignment = 1

[node name="V3" type="VBoxContainer" parent="C/V/V2"]
custom_minimum_size = Vector2(310, 0)
layout_mode = 2

[node name="CustomButton" type="Button" parent="C/V/V2/V3"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Custom Gordle"

[node name="Label" type="Label" parent="C/V/V2/V3"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Choose your own word"
label_settings = SubResource("LabelSettings_cdviw")
horizontal_alignment = 1

[node name="CreditsButton" type="Button" parent="C/V/V2"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Licenses"

[node name="QuitButton" type="Button" parent="C/V/V2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="Credits" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.054902, 0.054902, 0.105882, 0.784314)

[node name="M" type="MarginContainer" parent="Credits"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="V" type="VBoxContainer" parent="Credits/M"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="Credits/M/V"]
layout_mode = 2
size_flags_vertical = 3

[node name="CreditsRichTextLabel" type="RichTextLabel" parent="Credits/M/V/Panel"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true

[node name="CreditsBackButton" type="Button" parent="Credits/M/V"]
layout_mode = 2
size_flags_horizontal = 8
text = "Back"

[connection signal="pressed" from="C/V/V2/V/DailyButton" to="." method="_on_DailyButton_pressed"]
[connection signal="pressed" from="C/V/V2/V2/RandomButton" to="." method="_on_RandomButton_pressed"]
[connection signal="pressed" from="C/V/V2/V3/CustomButton" to="." method="_on_custom_button_pressed"]
[connection signal="pressed" from="C/V/V2/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="C/V/V2/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Credits/M/V/CreditsBackButton" to="." method="_on_CreditsBackButton_pressed"]
